--- a/style.css
+++ b/style.css
@@ -1,33 +1,45 @@
-footer {
-    width:100%;
-    position:relative;
-    clear:all;
-    height:10%;
-    background-color:rgb(177, 170, 170);
-   
-}
 
+/* Footer formatting */
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+    background-image: url("white-abstract1.jpg");
+    background-size:100%;
 
-.footer-content ul {
-    display: flex;
-    justify-content:center;
     
-    
+  }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align:center;
+    height: 150px; /* Set the fixed height of the footer here */
+    line-height: 140px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
+
+
+.footer-portfolio {
+    clear:both;
+    margin-top:10%;
 }
 
-footer li {
-    list-style-type:none;
-    padding:20px;
-}
+/* footer end */
+
 
 .fab {
-    color:white;
+    color:black;
+    font-size:30px;
+    padding:10px;
 }
 
 .logo {
     width:32px;
-    margin-left:-10px;
-    margin-right:10px;
+    margin-left:10px;
+    
     
 }
 
@@ -39,6 +51,8 @@ footer li {
 .headshot {
     width:500px;
     margin-top:50px;
+    border:solid gray 2px;
+    
 }
 
 .bio {
