--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
     margin-bottom: 60px; /* Margin bottom by footer height */
     background-image: url("white-abstract1.jpg");
     background-size:100%;
+    min-width: 480px;
 
     
   }
@@ -19,6 +20,7 @@ html {
     height: 150px; /* Set the fixed height of the footer here */
     line-height: 140px; /* Vertically center the text there */
     background-color: #f5f5f5;
+    min-width: 480px;
   }
 
 
@@ -40,7 +42,6 @@ html {
     width:32px;
     margin-left:10px;
     
-    
 }
 
 .card-1 {
@@ -56,5 +57,5 @@ html {
 }
 
 .bio {
-    margin-bottom:3vh;
+    margin-bottom: 7%;
 }
