--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 
 /* Footer formatting */
-html {
+/* html {
     position: relative;
     min-height: 100%;
   }
   body {
     margin-bottom: 60px; /* Margin bottom by footer height */
-    background-image: url("white-abstract1.jpg");
-    background-size:100%;
-    min-width: 480px;
+    /* background-image: url("white-abstract1.jpg"); */
+    /* background-size:100%; */
+    /* min-width: 480px; */
+    /* position:relative; */
 
-    
+/*     
   }
   .footer {
     position: absolute;
@@ -18,16 +19,37 @@ html {
     width: 100%;
     text-align:center;
     height: 150px; /* Set the fixed height of the footer here */
-    line-height: 140px; /* Vertically center the text there */
-    background-color: #f5f5f5;
-    min-width: 480px;
+    /* line-height: 140px; Vertically center the text there */
+    /* background-color: black;; */
+    /* min-width: 480px; */
+  
+
+  body {
+      position: relative;
+      
+
+  }
+  .footer {
+      position:absolute;
+      bottom:0;
+      width:100vw;
+      height:15vh;
+      background-color:grey;
+      left:0;
+      right:0;
   }
 
+  .contact,.home {
+      height:95vh;
+  }
 
-.footer-portfolio {
+  .portfolio {
+      margin-bottom:3vh;
+  }
+/* .footer-portfolio {
     clear:both;
     margin-top:10%;
-}
+} */
 
 /* footer end */
 
@@ -57,5 +79,12 @@ html {
 }
 
 .bio {
-    margin-bottom: 7%;
+    /* margin-bottom: 7%; */
+}
+
+.footer-links{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding-top:5vh;
 }
