--- a/style.css
+++ b/style.css
@@ -1,20 +1,21 @@
   body {
       position: relative;
-    background-image:url(imgs/)      
+      width:100vw;
 
   }
   .footer {
+      display:flex;
+      justify-content: center;
+      align-items: center;
       position:absolute;
-      clear:both;
-      bottom:0;
+      clear:all;
       width:100vw;
       height:15vh;
-      background-color:grey;
-      left:0;
-      right:0;
+      background-color:rgb(20, 20, 20);
+      
   }
 
-
+  
 
   .portfolio {
       margin-bottom:3vh;
@@ -22,14 +23,17 @@
 
 
 .fab {
-    color:black;
-    font-size:2vw;
+    color:rgba(255, 255, 255, 0.651);
+    font-size:2rem;
     padding:10px;
+}
+
+.fab:hover {
+    color:white;
 }
 
 .logo {
     width:3rem;
-    margin-left:10px;
     
 }
 
@@ -38,7 +42,6 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    padding-top:5vh;
 }
 
 
@@ -53,6 +56,9 @@
 
 #headshot {
     max-width: 100%;
+    border:4px solid black;
+    border-radius:4px;
+    margin-top:30px;
 }
 
 #bio {
@@ -60,13 +66,25 @@
     margin-right:10px;
     padding-left:20px;
     padding-right:20px;
-    
 }
-
 
 #github {
     display:flex;
     justify-content: center;
 }
 
+.card-image-top {
+    height:358.656px;
+}
+#pass-gen-card-body {
+    margin:0;
+    padding-bottom: 14px;
+}
 
+.portfolio-body {
+    margin-top: 7vh;
+}
+
+.footer-contact {
+    bottom:-247px;
+}
