--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
       
   }
 
-  
 
   .portfolio {
       margin-bottom:3vh;
@@ -57,7 +56,7 @@
 
 #headshot {
     max-width: 100%;
-    border:4px solid black;
+    border:3px solid black;
     border-radius:4px;
     margin-top:30px;
 }
@@ -65,6 +64,7 @@
 #bio {
     margin-left:14px;
     margin-right:10px;
+    margin-bottom:40px;
     padding-left:20px;
     padding-right:20px;
 }
@@ -102,4 +102,26 @@
     max-height:140vh; */
     margin-top: 5vh;
     margin-bottom: 5vh;
+}
+
+#resume-portfolio-buttons {
+    max-width:60%;
+    margin-left:20%;
+}
+
+
+#portfolio-btn-link, #resume-btn-link {
+        text-decoration: none;
+        color:black;
+}
+
+#portfolio-Btn, #resume-Btn {
+    border-radius:30px;
+}
+
+#portfolio-Btn a:hover {
+    color:white;
+}
+#resume-Btn a:hover {
+    color:white;
 }
