editing headshot photo; adding technologies to index page

--- a/style.css
+++ b/style.css
@@ -119,3 +119,15 @@
     color: black;
     font-size: 5rem;
 }
+
+
+.devicon {
+    font-size: 5rem;
+    color: black;
+}
+
+
+.phoneEmail {
+    /* color: #007BFD; */
+    color: #0A7BFF;
+}
